mus: Avoid a crash when the gpu mojom connection is lost.

If the renderer is unable to connect to the gpu host process, or if
connection to the gpu host process is lost before a gpu channel is
established, then delay the creation of the CompositorFrameSink.

BUG=700162

Review-Url: https://codereview.chromium.org/2743873002
Cr-Commit-Position: refs/heads/master@{#456642}

Former-commit-id: be22c4f9b7e26d88266518e8118464b68a1b9aa4